--- a/k8s/charts/airflow/values.yaml
+++ b/k8s/charts/airflow/values.yaml
@@ -74,8 +74,8 @@ airflow:
       password: admin
       role: Admin
       email: admin@example.com
-      firstName: admin
-      lastName: admin
+      firstName: Sebastian
+      lastName: Torres
 
   ## bash-like templates to be used in `airflow.users`
   ## - [WARNING] if a Secret or ConfigMap is missing, the sync Pod will crash
@@ -116,12 +116,66 @@ airflow:
   ##           "aws_secret_access_key": "${AWS_ACCESS_KEY}",
   ##           "region_name":"eu-central-1" }
   ##
-  connections: []
+  connections: 
+  - id: aws
+    type: aws
+    description: AWS CONN
+    extra: |-
+      { 
+        "aws_access_key_id": "${AWS_ACCESS_KEY_ID}",
+        "aws_secret_access_key": "${AWS_SECRET_ACCESS_KEY}",
+        "region_name":"us-east-1" 
+      }
+    
+  - id: emr
+    type: emr
+    description: EMR CONN
+    login: "${AWS_ACCESS_KEY_ID}"
+    password: "${AWS_SECRET_ACCESS_KEY}"
+
+  - id: redshift
+    type: redshift
+    description: REDSHIFT CONN
+    host: redshift-cluster-etl-torres.cpmardrhdluz.us-east-1.redshift.amazonaws.com
+    schema: elttorres
+    login: torres
+    password: "${REDSHIFT_PASSWORD}"
+    port: 5439
+
+  - id: postgres
+    type: postgres
+    description: POSTGRES CONN
+    host: torrespostgresql-instance.cngltutuixt3.us-east-1.rds.amazonaws.com
+    schema: torrespostgresql
+    login: torresetlaws
+    password: "${POSTGRES_PASSWORD}"
+    port: 5432
+
 
   ## bash-like templates to be used in `airflow.connections`
   ## - see docs for `airflow.usersTemplates`
   ##
-  connectionsTemplates: {}
+  connectionsTemplates:
+
+    AWS_ACCESS_KEY_ID:
+      kind: secret
+      name: aws-credentials
+      key: aws_access_key_id
+
+    AWS_SECRET_ACCESS_KEY:
+      kind: secret
+      name: aws-credentials
+      key: aws_secret_access_key
+
+    POSTGRES_PASSWORD:
+      kind: secret
+      name: postgres-credentials
+      key: postgres_password
+
+    REDSHIFT_PASSWORD:
+        kind: secret
+        name: redshift-credentials
+        key: redshift_password
 
   ## if we create a Deployment to perpetually sync `airflow.connections`
   ## - see docs for `airflow.usersUpdate`
@@ -140,12 +194,44 @@ airflow:
   ##     - key: "var_2"
   ##       value: "my_value_2"
   ##
-  variables: []
+  variables: 
+
+    - key: "AWS_ACCESS_KEY_ID"
+      value: "${AWS_ACCESS_KEY_ID}"
+
+    - key: "AWS_SECRET_ACCESS_KEY"
+      value: "${AWS_SECRET_ACCESS_KEY}"
+
+    - key: "POSTGRES_PASSWORD"
+      value: "${POSTGRES_PASSWORD}"
+
+    - key: "GITHUB_TOKEN"
+      value: "${GITHUB_TOKEN}"
 
   ## bash-like templates to be used in `airflow.variables`
   ## - see docs for `airflow.usersTemplates`
   ##
-  variablesTemplates: {}
+  variablesTemplates: 
+
+    AWS_ACCESS_KEY_ID:
+      kind: secret
+      name: aws-credentials
+      key: aws_access_key_id
+
+    AWS_SECRET_ACCESS_KEY:
+      kind: secret
+      name: aws-credentials
+      key: aws_secret_access_key
+
+    POSTGRES_PASSWORD:
+      kind: secret
+      name: postgres-credentials
+      key: postgres_password
+
+    GITHUB_TOKEN:
+      kind: secret
+      name: token-credential
+      key: token
 
   ## if we create a Deployment to perpetually sync `airflow.variables`
   ## - see docs for `airflow.usersUpdate`
@@ -217,7 +303,14 @@ airflow:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages:
+
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
 
   ## pip packages that are protected from upgrade/downgrade by `extraPipPackages`
   ## - [WARNING] Pods will fail to start if `extraPipPackages` would cause these packages to change versions
@@ -350,7 +443,13 @@ airflow:
     ##   extraPipPackages:
     ##     - "SomeProject==1.0.0"
     ##
-    extraPipPackages: []
+    extraPipPackages: 
+      - "apache-airflow-providers-amazon>=2.5.0"
+      - "apache-airflow-providers-postgres"
+      - "sqlalchemy"
+      - "boto3"
+      - "pandas"
+      - "pygithub"
 
     ## extra containers for the pod template
     ## - spec for Container:
@@ -651,7 +750,13 @@ scheduler:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages: 
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
 
   ## extra VolumeMounts for the scheduler Pods
   ## - spec of VolumeMount:
@@ -819,7 +924,13 @@ web:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages: 
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
 
   ## extra VolumeMounts for the web Pods
   ## - spec for VolumeMount:
@@ -1009,7 +1120,13 @@ workers:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages: 
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
 
   ## extra VolumeMounts for the worker Pods
   ## - spec for VolumeMount:
@@ -1128,7 +1245,13 @@ triggerer:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages: 
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
 
   ## extra VolumeMounts for the triggerer Pods
   ## - spec for VolumeMount:
@@ -1270,7 +1393,14 @@ flower:
   ##   extraPipPackages:
   ##     - "SomeProject==1.0.0"
   ##
-  extraPipPackages: []
+  extraPipPackages: 
+    - "apache-airflow-providers-amazon>=2.5.0"
+    - "apache-airflow-providers-postgres"
+    - "sqlalchemy"
+    - "boto3"
+    - "pandas"
+    - "pygithub"
+
 
   ## extra VolumeMounts for the flower Pods
   ## - spec for VolumeMount:
